code params added

--- a/code_blocks.ipynb
+++ b/code_blocks.ipynb
@@ -34,6 +34,71 @@
   },
   {
    "cell_type": "markdown",
+   "id": "440a9543",
+   "metadata": {},
+   "source": [
+    "# Seaborn params"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "484df200",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "\n",
+    "# Statistics functions\n",
+    "from scipy import stats\n",
+    "\n",
+    "import warnings\n",
+    "# Suppressing a warning \n",
+    "warnings.filterwarnings(\"ignore\") \n",
+    "warnings.warn(\"this will not show\")\n",
+    "\n",
+    "# The style parameters control properties like the color of the background and whether a grid is enabled by default.\n",
+    "\n",
+    "sns.set_style(\"darkgrid\")\n",
+    "\n",
+    "params = {\n",
+    "'figure.figsize':(12,5),\n",
+    "'figure.titlesize':20,\n",
+    "'font.size': 15,\n",
+    "'axes.titlesize': 20,\n",
+    "'axes.labelsize': 15,\n",
+    "'xtick.labelsize': 15,\n",
+    "'ytick.labelsize': 15,\n",
+    "'legend.fontsize': 15,\n",
+    "'boxplot.showmeans': True,\n",
+    "'boxplot.meanprops.marker': 'o',\n",
+    "'boxplot.meanprops.markeredgecolor': 'k',\n",
+    "'boxplot.meanprops.markerfacecolor': 'w',\n",
+    "'boxplot.meanprops.markersize': 10.1,\n",
+    "}\n",
+    "# print(plt.style.library)\n",
+    "plt.rcParams.update(params)\n",
+    "# plt.rcParams.update(plt.rcParamsDefault)\n",
+    "# print(plt.rcParams['figure.figsize'])\n",
+    "\n",
+    "# Environment settings: \n",
+    "pd.set_option('display.float_format', lambda x: '%.3f' % x)\n",
+    "# Set it None to display all rows in the dataframe\n",
+    "pd.set_option('display.max_rows', 100)\n",
+    "# Set it to None to display all columns in the dataframe\n",
+    "pd.set_option('display.max_columns', None)\n",
+    "\n",
+    "# It is a magic function that renders the figure in the notebook\n",
+    "# Attention if U use this inline Command not work 'figure.figsize'\n",
+    "# %matplotlib inline "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "aa5daa3b-f682-454f-a636-b4a409224bbc",
    "metadata": {},
    "source": [
