--- a/code_blocks.ipynb
+++ b/code_blocks.ipynb
@@ -464,7 +464,7 @@
    "id": "cbcbb262-1913-4ff4-82e9-5b927230ef5b",
    "metadata": {},
    "source": [
-    "# Confidance Interval"
+    "# Confidence Interval"
    ]
   },
   {
